Fixed scrollbar on edge

--- a/styles/sass/layout/_lecture_schedule.scss
+++ b/styles/sass/layout/_lecture_schedule.scss
@@ -141,6 +141,7 @@
 
 .column.hidden {
   flex: 0;
+  overflow: hidden;
 
   .column-content-wrapper {
     margin: 0;
